# Unitra.Service.ML

./: .gitignore  Dockerfile  README.md  benchmark_results.md  modal.toml  pyproject.toml  requirements-docker.txt
.github/workflows/: deploy-modal.yml
scripts/: cloud_mt_benchmark.py  deploy.sh  download_model.py
selfhosted/: __init__.py  main.py
src/: __init__.py
src/client/: __init__.py  mt_client.py
src/config/: __init__.py  languages.py  settings.py
src/services/: __init__.py  mt_service.py
tests/: __init__.py  test_config.py  test_download_model.py  test_edge_cases.py  test_error_handling.py  test_integration.py  test_languages.py  test_mt_client.py  test_mt_service.py  test_mt_service_methods.py  test_performance.py
