[tool.poetry]
name = "unitra-service-ml"
version = "0.1.0"
description = "Modal.com ML services for Unitra"
authors = ["Unitra Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
modal = "^0.64.0"
torch = "^2.1.0"
transformers = "^4.36.0"
sentencepiece = "^0.1.99"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
