[tool.poetry]
name = "unitra-service-ml"
version = "0.1.0"
description = "Modal.com ML services for Unitra"
authors = ["Unitra Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
modal = "^0.64.0"
torch = "^2.1.0"
transformers = "^4.36.0"
sentencepiece = "^0.1.99"
httpx = "^0.27.0"
accelerate = "^0.25.0"
safetensors = "^0.4.0"
fastapi = "^0.109.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
respx = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
